Fix broken CSS padding in base.css

--- a/src/css/base.css
+++ b/src/css/base.css
@@ -41,7 +41,7 @@ p {
 
 /* Buttons */
 button::-moz-focus-inner {
-	padding: adding: 0;
+	padding: 0;
 	border: 0
 }
 
